image and table added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
   <body>
     <h1>Hello, I am Mziyanda Tobo</h1>
-    <h2>Successful web developer, programmer and cer1tified life coach</h2>
-    <p></p>
+    <h2>Successful web developer, programmer and certified life coach.</h2>
+    <img src="bru.jpg" alt="Girl in a jacket" width="1000" height="600" />
+    <br />
+    <br />
+    <table>
+      <tr>
+        <th>Skill</th>
+        <th>Level</th>
+      </tr>
+      <tr>
+        <td>JavaScript</td>
+        <td>Expert</td>
+      </tr>
+      <tr>
+        <td>C++</td>
+        <td>Expert</td>
+      </tr>
+      <tr>
+        <td>Java</td>
+        <td>Expert</td>
+      </tr>
+      <tr>
+        <td>CSS</td>
+        <td>Expert</td>
+      </tr>
+      <tr>
+        <td>HTML</td>
+        <td>Expert</td>
+      </tr>
+    </table>
   </body>
 </html>
